sites/indigo/clusters/dal-indigo-core-1/wave-2/overlays/cilium-hubble-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cilium-hubble-ui
  annotations:
    cert-manager.io/cluster-issuer: dalmura-letsencrypt-prod
    external-dns.kubernetes.io/hostname: cilium-hubble.indigo.dalmura.cloud
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: true
spec:
  ingressClassName: ingress-private
  tls:
    - hosts:
      - cilium-hubble.indigo.dalmura.cloud
      secretName: cilium-hubble-cert
  rules:
  - host: cilium-hubble.indigo.dalmura.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hubble-ui
            port:
              number: 80
